--- a/src/_locales/be/messages.json
+++ b/src/_locales/be/messages.json
@@ -1012,7 +1012,7 @@
     "description": "An entry in the widget used to select the type of issue"
   },
   "supportS6Select1Option7": {
-    "message": "Leads to badware, phishing",
+    "message": "Вядзе да шкодных праграм, фішынгу",
     "description": "An entry in the widget used to select the type of issue"
   },
   "supportS6Checkbox1": {
